added new modules, search and pagination buttons too